fix expand/collapse

--- a/src/app/codes-list/codes-list.component.scss
+++ b/src/app/codes-list/codes-list.component.scss
@@ -1,4 +1,4 @@
-code-list.hidden {
+.hiddenn {
     display: none !important;
 }
 
